--- a/flanaganthesis.tex
+++ b/flanaganthesis.tex
@@ -222,16 +222,18 @@ spatial reasoning (CLP)
 declarative Prolog / CLP framework
 
 \section{Representation}
-CAAD tools represent the physical and structural aspects of a design in a manner that is both accurate and precise. This type of representation captures the design, in terms of the spatial configurations as they are comprised of the architectural entities (i.e., walls, doors, windows), at a low-level of granularity that is needed in the actual construction of the building. This allows an architect to reason about the physical, structural and mechanical aspects of a design, such as the precise placement of a door in a wall or the mechanics of a window swinging open and closed. However, this type of representation scheme does not incorporation the qualitative and functional features of the design. For example, a structural design requirement that addresses air circulation stipulates that a doorway and window should face directly towards each other. For a traditional CAAD based system, reasoning about such a requirement is not possible because it pertains to qualitative spatial design features and functional attributes that go beyond the purely geometric representation of the design, i.e., in this case the qualitative spatial relationship between a window and doorway. 
+State-of-the-art CAAD tools represent the physical and structural aspects of an architectural design in a manner that is both accurate and precise. This type of representation captures the design, in terms of the spatial features, spatial dimensions of architectural entities, placement of entities within the building, at a low-level of granularity that is needed in the actual construction of the building, and allows for reasoning about the physical, structural and mechanical aspects of a design with regard to the precise geometric representation; such as the placement of a door in a wall or the mechanics of a window swinging open and closed. TODO: talk about x,y,z coordinates of real space, quantitative representation.
 
-In DSpace this type of requirement can be reasoned about because the design is represented in a multiple perspective structure that incorporates the design's artefactual extensions, qualitative spatial relationships, and quantitative geometries. This representation allows an architect to validate a work-in-progress design from a conceptual and qualitative perspective against the physical and precise real world geometrical representation of the design \cite{Bhatt}.
+However, this type of representation scheme does not incorporation the qualitative and functional features of the design. For example, a structural design requirement that addresses air circulation stipulates that a doorway and window should face directly towards each other. For a traditional CAAD based system, reasoning about such a requirement is not possible because it pertains to qualitative spatial design features and functional attributes that go beyond the purely geometric representation of the design, i.e., in this case the qualitative spatial relationship between a window and doorway. 
+
+In DSpace an architectural design is represented in a multiple perspective structure that incorporates the design's artefactual extensions, qualitative spatial relationships, and quantitative geometries. This representation allows an architect to validate a work-in-progress design from a conceptual and qualitative perspective against the physical and precise real world geometrical representation of the design \cite{Bhatt}.
 
 TODO: fig:multiple perspective representation
 
-This remainder of this section is structured as follows. The first subsection looks at the multiple perspective design representation of the DSpace reasoner. The second subsection looks at how each perspective is formally modeled (coded) in ins CLP framework of DSpace. The last section looks at how a real world design from a state-of-the-art architectural design tool is imported into the DSpace reasoner from the DsSchema and IFC format.
+This remainder of this section is structured as follows. The first subsection looks at the multiple perspective design structure of the DSpace reasoner. The second subsection looks at how each perspective is formally modeled (coded) in ins CLP framework of DSpace. The last section looks at how a real world design from a state-of-the-art architectural design tool is imported into the DSpace reasoner from the DsSchema and IFC format.
 
 \subsection{Multiple Perspectives}
-In DSpace designs are represented in multiple perspectives that incorporate: (1) the artefactual extension of architectural entities, (2) the spatial abstractions of the design from a qualitative spatial perspective, and (3) the physical geometries that pertain to the quantitative structures of the design. The multiple presepective representation of DSpace allows reasoning about design requirements that go beyond purely quantitative geometric reasoning.
+In DSpace designs are represented in a multiple perspective structure that incorporate: (1) the artefactual extension of architectural entities, (2) the spatial abstractions of the design from a qualitative spatial perspective, and (3) the physical geometries that pertain to the quantitative structures of the design. The multiple presepective representation of DSpace allows reasoning about design requirements that go beyond purely quantitative geometric reasoning.
 
 \subsubsection{Quantitative Model}
 
@@ -256,18 +258,20 @@ There are three types of spatial artefacts identified by Bhatt\cite{Bhatt} that 
 \label{artefactual-extensions}
 \end{figure}
 
-The operational space encompasses the region of space required by an object to preform it's function. For example, the operational space of a door is the area in which a door can occupy during it's operation, opening and closing (see figure \ref{operational-space}). This space is dynamic in the sense that it represents the all possible location the physical door can occupy. 
+The operational space encompasses the region of space required by an object to preform it's function. For example, the operational space of a door is the area in which a door can occupy during it's operation, opening and closing (see figure \ref{operational-space}). This space is dynamic in the sense that it represents the configurable space the physical doorway can occupy.
 
-The functional space encompasses a region of space that is required for the object to function or for a person to operate the object. For example, the functional space of a doorway is the total area needed for a person to operate, open and close, as well as any additional space need to navigate entirely through the door (see figure \ref{functional-space}). 
+the all possible location the physical door can occupy. 
+
+The functional space encompasses the region of space that is required for the object to function or for a person to operate the object. For example, the functional space of a doorway is the total area needed for a person to operate, open and close, as well as any additional space need to navigate entirely through the doorway (see figure \ref{functional-space}). 
 
 The range space pertains to a region of space that encompass the range of a camera's view or the range of a motion sensor. For example, the range space of a camera is defined by its depth of field and angle of view. It represents the total space that is under surveillance of the camera (see figure \ref{range-space}).
 
-Artefactual extensions effect how well a design functions. For example, a sink in a bathroom has a functional space, the space a person occupies while washing his/her hands at the sink. If the functional space of the sink is interfered by (i.e., topologically overlapping) the functional and/or physical space of a doorway, this will cause a circulation problem when both the doorway and sink are simultaneously being operated, i.e., a collision between the person washing his/her hands and the doorway being opened. In this example the functional aspects of the bathrooms design with regard to the mitigation of circulation problems is directly influenced by the spatial configuration of non-physical artefactual extension of the design. 
+Artefactual extensions directly effect how well a design functions. For example, a sink in a bathroom has a functional space, the space a person occupies while washing his/her hands at the sink. If this space is interfered by (i.e., topologically overlapping) the functional and/or physical space of a doorway, this will cause a circulation problem when both the doorway and sink are simultaneously being operated, i.e., a collision between the person washing his/her hands and the doorway being opened. In this example, the functional aspects of the bathrooms design with regard to the mitigation of circulation problems is directly influenced by the spatial configuration of the non-physical artefactual extensions of the design. 
 
 TODO: fig:sink example.
 
 \subsubsection{Spatial Abstraction for Qualitative Spatial Reasoning}
-The quantitative geometries of the architectural structures and their artefactual extensions are directly imported into the DSpace reasoner, via the DsSchema (more on this later). These quantitative geometries are the foundation of the multiple perceptive design representation. However, to reason about the design on a conceptual and/or qualitative level, the design must be represented from a spatial perspective at a higher level of abstraction from the quantitative geometries. 
+The quantitative geometries of the architectural structures and their artefactual extensions are directly imported into the DSpace reasoner, via the DsSchema (more on this later). These quantitative geometries are the foundation of the multiple perceptive design representation. However, to reason about design on a conceptual and/or qualitative level, the design must be represented at a higher level of abstraction from the quantitative geometries. 
 
 In DSpace architectural entities have spatially abstracted representations that allows DSpace to reason about the design a higher levels of abstraction. For example, DSpace uses qualitative spatial reasoning for orientation, topology, and distance constraints over the qualified spatial geometries of the design. The crux of this is that it bridges the gap between the quantified geometries and the functional / qualitative requirements of the design, thus allowing the reasoner to validate a high level requirement against its precise geometric representation. 
 
